@@ -46,7 +46,7 @@ HideSubElements.DeadlineDuration = ScriptVersion ScriptGrammar
 HideSubElements.Expression=ScriptVersion ScriptGrammar
 #HideSubElements.ExtendedAttribute=
 #HideSubElements.ExternalPackage=
-#HideSubElements.ExternalReference=
+HideSubElements.ExternalReference=namespace xref
 #HideSubElements.FinishMode=
 #HideSubElements.FormalParameter=
 HideSubElements.InitialValue=ScriptVersion ScriptGrammar
