@@ -16,9 +16,6 @@
 #
 #######################################################################
 
-############################# MAIN  #######################################
-
-
 ################### EXTERNAL PACKAGE RELATIONS CONFIGURATION ############################
 BackgroundColor = R=255,G=255,B=215
 
