@@ -28,6 +28,7 @@ BackgroundColor = R=255,G=255,B=215
 #LDAPCountLimit = 0
 #LDAPTimeLimit = 0
 #LDAPPageSize = 1000
+#LDAPProtocol=ldap
 #LDAPHost=localhost
 #LDAPPort=389
 #LDAPBaseDN=
