@@ -45,7 +45,7 @@ BackgroundColor = R=255,G=255,B=215
 # inline panel generator configuration
 #
 
-#PreferredNumberOfLinesForExpression=4
+#PreferredNumberOfLinesForExpression=8
 
 #XMLActualParametersPanel.useAdvanced=true
 #XMLActualParametersPanel.preferredNumberOfLinesForExpression=4
@@ -70,6 +70,7 @@ HideSubElements.XMLGroupPanel.ActualParameter = ScriptVersion ScriptGrammar
 #HideSubElements.XMLGroupPanel.DataField =
 HideSubElements.XMLGroupPanel.DeadlineDuration = ScriptVersion ScriptGrammar
 HideSubElements.XMLGroupPanel.Expression = ScriptVersion ScriptGrammar
+HideSubElements.XMLGroupPanel.ExternalReference=namespace xref
 HideSubElements.XMLGroupPanel.InitialValue = ScriptVersion ScriptGrammar
 #HideSubElements.XMLGroupPanel.Package = PackageHeader RedefinableHeader WorkflowProcesses Applications Associations Artifacts Pools Participants DataFields TypeDeclarations ExternalPackages Namespaces ExtendedAttributes
 #HideSubElements.XMLGroupPanel.Transition = ExtendedAttributes
