@@ -44,7 +44,7 @@ BackgroundColor = R=255,G=255,B=215
 # panel generator configuration
 #
 
-#PreferredNumberOfLinesForExpression=4
+#PreferredNumberOfLinesForExpression=8
 
 #XMLActualParametersPanel.useAdvanced=true
 #XMLActualParametersPanel.preferredNumberOfLinesForExpression=4
@@ -69,6 +69,7 @@ HideSubElements.XMLGroupPanel.ActualParameter = ScriptVersion ScriptGrammar
 #HideSubElements.XMLGroupPanel.DataField =
 HideSubElements.XMLGroupPanel.DeadlineDuration = ScriptVersion ScriptGrammar
 HideSubElements.XMLGroupPanel.Expression = ScriptVersion ScriptGrammar
+HideSubElements.XMLGroupPanel.ExternalReference=namespace xref
 HideSubElements.XMLGroupPanel.InitialValue = ScriptVersion ScriptGrammar
 #HideSubElements.XMLGroupPanel.Package =
 #HideSubElements.XMLGroupPanel.Transition = ConnectorGraphicsInfos
